fix: resubmit token and alignment

--- a/src/containers/action-modal/components/challenge/challenge.scss
+++ b/src/containers/action-modal/components/challenge/challenge.scss
@@ -18,6 +18,22 @@
     justify-content: space-between;
   }
 
+  &-fees {
+    display: flex;
+    font-size: 14px;
+    font-weight: 400;
+    justify-content: space-between;
+    text-align: start;
+
+    &-line {
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 1.15;
+      margin: 0;
+      padding: 0;
+    }
+  }
+
   &-bottom {
     align-items: center;
     display: flex;
